--- a/jessekk.github.io-main/DataBrowsing/China/China.html
+++ b/jessekk.github.io-main/DataBrowsing/China/China.html
@@ -1,26 +1,20 @@
 ﻿<!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>数据总览</title>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/echarts.min.js"></script>
-<script type="text/javascript" src="js/china.js"></script>
-<script type="text/javascript" src="js/map.js"></script>
-<script type="text/javascript" src="js/js.js"></script>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="../../../main/css/main.css">
+	<meta charset="utf-8">
+	<title>数据总览</title>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/echarts.min.js"></script>
+	<script type="text/javascript" src="js/china.js"></script>
+	<script type="text/javascript" src="js/map.js"></script>
+	<script type="text/javascript" src="js/js.js"></script>
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 	<div class="title">
-		<h1 >脱贫攻坚战下贫困地区的成绩数据可视化设计</h1>
-		<!-- <div class="menu menu2 pulll_left">
-			<ul>      
-				<li><a href="../../Forecast/DataForecast.html">预测</a></li>
-				<li><a href="../../CarbonDioxide/CarbonDioxide.html">关系</a></li>
-				<li><a href="../../Welcome/Welcome.html">首页</a></li>
-			</ul>
-		</div>		 -->
+		<h1>脱贫攻坚战下贫困地区的成绩数据可视化设计</h1>
 	</div>
 
 	<div class="mainbox">
@@ -29,7 +23,7 @@
 				<div class="box">
 					<div class="tit">贫困人口数量(2012-2020)&nbsp;</div>
 					<div><br>
-				    单位：万人</div>
+						单位：万人</div>
 					<div class="boxnav" style="height: 100%;">
 						<div class="" style="height: 250px" id="echart2">
 						</div>
@@ -48,10 +42,10 @@
 
 				<div class="box">
 					<div class="tit">年均脱贫人口
-						<a href="javacript:;">&nbsp;&nbsp;&nbsp;	中国贫困人口连续7年每年减贫1000万人以上&nbsp;</a>
-						<div class="boxnav" style="height: 250px;"  id="echart3">
+						<a href="javacript:;">&nbsp;&nbsp;&nbsp; 中国贫困人口连续7年每年减贫1000万人以上&nbsp;</a>
+						<div class="boxnav" style="height: 250px;" id="echart3">
+						</div>
 					</div>
-				</div>	
 			</li>
 
 			<li style="width: 20vw">
@@ -60,7 +54,24 @@
 					<div class="boxnav" id="echart4" style="height: 200px;"></div>
 				</div>
 			</li>
+			<button id="nextPageButton">下一页</button>
+
 		</ul>
 	</div>
+	<script>
+		$(document).ready(function() {
+		  // Fullpage 初始化代码
+		  $('#fullpage').fullpage({
+			navigation: true,
+		  });
+	  
+		  // 按钮点击事件
+		  $('#nextPageButton').on('click', function() {
+			$.fn.fullpage.moveSectionDown(); // 触发 Fullpage 下一页效果
+		  });
+		});
+	  </script>
+	  
 </body>
+
 </html>
