--- a/main/index.html
+++ b/main/index.html
@@ -9,13 +9,23 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="js/fullpage.js"></script>
   <script src="js/main.js"></script>
+
+
+  <script type="text/javascript" src="js/date/echarts.min.js"></script>
+  <script type="text/javascript" src="js/date/china.js"></script>
+  <script type="text/javascript" src="js/date/map.js"></script>
+  <script type="text/javascript" src="js/date/js.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+
+
+
   <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="print"
     onload="this.media='all'">
 </head>
 
 <body>
   <div id="fullpage">
-    <div class="section" style="background-image: url(img/bg/bg_1.jpg);">
+    <!-- <div class="section" style="background-image: url(img/bg/bg_1.jpg);">
       <div class="tile">
         <h1>新时代十年取得的伟大成就</h1>
       </div>
@@ -75,9 +85,52 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="section" style="background-image: url(img/bg/bg_3.jpg);" id="map_main">
-      <iframe src="../jessekk.github.io-main/DataBrowsing/China/China.html" frameborder="0" width="100%" height="100%" id="map_main_con"></iframe>
+      <div class="title">
+        <h1>脱贫攻坚战下贫困地区的成绩数据可视化设计</h1>
+      </div>
+
+      <div class="mainbox">
+        <ul class="clearfix nav1">
+          <li style="width: 20vw">
+            <div class="box">
+              <div class="tit">贫困人口数量(2012-2020)&nbsp;</div>
+              <div><br>
+                单位：万人</div>
+              <div class="boxnav" style="height: 100%;">
+                <div class="" style="height: 250px" id="echart2">
+                </div>
+              </div>
+            </div>
+          </li>
+
+          <li style="width: 50vw">
+
+            <div class="box">
+              <div class="boxnav mapc" style="height: 40vh;width: 50vw;; position: relative">
+                <div class="map" id="map"></div>
+              </div>
+            </div>
+
+
+            <div class="box">
+              <div class="tit">年均脱贫人口
+                <a href="javacript:;">&nbsp;&nbsp;&nbsp; 中国贫困人口连续7年每年减贫1000万人以上&nbsp;</a>
+                <div class="boxnav" style="height: 250px;" id="echart3">
+                </div>
+              </div>
+          </li>
+
+          <li style="width: 20vw">
+            <div class="box">
+              <div class="tit">剩余贫困县个数&nbsp;</div>
+              <div class="boxnav" id="echart4" style="height: 200px;"></div>
+            </div>
+          </li>
+
+        </ul>
+      </div>
     </div>
     <div class="section" style="background-image: url(img/bg/bg_4.jpg);">
       <div class="tile">
@@ -93,12 +146,13 @@
 
   <script>
     $(document).ready(function () {
+      // Fullpage 初始化代码
       $('#fullpage').fullpage({
         navigation: true,
       });
     });
-
   </script>
+
 </body>
 
 </html>
