--- a/main/index.html
+++ b/main/index.html
@@ -86,6 +86,74 @@
         </div>
       </div>
     </div> -->
+
+    <div class="section" style="background-image: url(img/bg/bg_4.jpg);">
+      <div class="tile">
+        <h1>人民的生活在各方面都有着巨大提升</h1>
+      </div>
+      <div class="content">
+        <div class="square-grid">
+          <div class="block" style="width: 80%;">
+            在<b>出行交通</b>方面，这十年，我国交通运输事业取得历史性成就、发生历史性变革，迎来由交通大国向交通强国的历史性跨越。<br>
+            十年来，我国累计新建改建农村公路约253万公里，解决了1040个乡镇、10.5万个建制村通硬化路的难题<br>
+            十年来，从2012年的97625公里到2021年突破15万公里，中国铁路营运里程增长超过5.2万公里；从2012年的9356公里到2021年的突破4万公里，中国高铁营运里程增长3倍多，稳居世界第一<br>
+            十年来，我国内河航道的通航里程达12.8万公里，其中高等级航道超过1.6万公里，拥有生产用码头泊位20867个，其中万吨级及以上泊位2659个<br>
+            十年来，民航新建、迁建运输机场82个，机场总数达到250个，新增航线3000余条，航线总数达到5581条，“在脱贫地区新建运输机场47个，航空服务对脱贫地区的人口覆盖率达到83.6%<br>
+          </div>
+
+          <div class="block">
+            1.公路广泛覆盖<br>
+            <img src="img/比赛/high.jpg" alt="">
+          </div>
+          <div class="block">
+            2.高铁迅速发展<br>
+            <img src="img/比赛/North_Guiyang_Railway_Station_2015.10.7.jpg" alt="">
+          </div>
+          <div class="block">
+            3.水运基础设施体系加速完善<br>
+            <img src="img/比赛/R.jpg" alt="">
+          </div>
+          <div class="block">
+            4.民航快速发展
+            <img src="img/比赛/Guiyang_Longdongpu_International_Airport.jpg" alt="">
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="section" style="background-image: url(img/bg/bg_4.jpg);">
+      <div class="tile">
+        <h1>人民的生活在各方面都有着巨大提升</h1>
+      </div>
+      <div class="content">
+        <div class="square-grid">
+          <div class="block" style="width: 80%;">
+            在<b>社会发展</b>方面，这十年，<br>
+            十年来，<br>
+            十年来，<br>
+            十年来，<br>
+            十年来，<br>
+          </div>
+
+          <div class="block">
+            1.能源电力<br>
+            <img src="img/比赛/image-20230524153407288.png" alt="">
+          </div>
+          <div class="block">
+            2.民生工程<br>
+            <img src="img/比赛/image-20230524153452354.png" alt="">
+          </div>
+          <div class="block">
+            3.数字通信<br>
+            <img src="img/比赛/image-20230524153530323.png" alt="">
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
     <div class="section" style="background-image: url(img/bg/bg_3.jpg);" id="map_main">
       <div class="title">
         <h1>脱贫攻坚战下贫困地区的成绩数据可视化设计</h1>
@@ -132,26 +200,17 @@
         </ul>
       </div>
     </div>
-    <div class="section" style="background-image: url(img/bg/bg_4.jpg);">
-      <div class="tile">
-        <h1>全面深化改革与现代化治理能力</h1>
-      </div>
-    </div>
-    <div class="section" style="background-image: url(img/bg/bg_5.jpg);">
-      <div class="tile">
-        <h1>积极开放战略与共建"一带一路"</h1>
-      </div>
-    </div>
-  </div>
 
-  <script>
-    $(document).ready(function () {
-      // Fullpage 初始化代码
-      $('#fullpage').fullpage({
-        navigation: true,
+
+
+    <script>
+      $(document).ready(function () {
+        // Fullpage 初始化代码
+        $('#fullpage').fullpage({
+          navigation: true,
+        });
       });
-    });
-  </script>
+    </script>
 
 </body>
 
