--- a/main/index.html
+++ b/main/index.html
@@ -18,14 +18,14 @@
   <link rel="stylesheet" href="css/style.css">
 
 
-
+  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="print"
     onload="this.media='all'">
 </head>
 
 <body>
   <div id="fullpage">
-    <!-- <div class="section" style="background-image: url(img/bg/bg_1.jpg);">
+    <div class="section" style="background-image: url(img/bg/bg_1.jpg);">
       <div class="tile">
         <h1>新时代十年取得的伟大成就</h1>
       </div>
@@ -61,31 +61,37 @@
           </div>
         </div>
       </div>
+      <div class="down">
+        <i class="fa fa-arrow-down" style="height: 100%;width: auto;"></i>
+      </div>
     </div>
     <div class="section" style="background-image: url(img/bg/bg_2.jpg);">
       <div class="tile">
         <h1>实现中国梦的总体布局和战略布局</h1>
-        <div class="content">
-          <div class="square-grid">
-            <div class="block" style="width: 100%;">
-              (1) 习近平总书记着眼于全面建成小康社会、实现社会主义现代化和中华民族伟大复兴的中国梦，坚持整体推进、重点突破的方法论<br>
-              (2) 他制定了“五位一体”总体布局和“四个全面”战略布局，既着眼于工作全局，又突出战略重点，从点面结合上回答新时代建设布局的问题
-            </div>
-            <div class="block">
-              “五位一体”总体布局<br>
-              (1) “五位一体”总体布局涉及经济建设、政治建设、文化建设、社会建设、生态文明建设等各个方面。<br>
-              (2) 它是党中央治国理政的整体布局，从面上回答新时代“施政布局”的问题。
-            </div>
-            <div class="block">
-              “四个全面”战略布局<br>
-              (1) “四个全面”战略布局涉及全面建成小康社会、全面深化改革、全面依法治国、全面从严治党等四大重点任务。<br>
-              (1) “四个全面”战略布局涉及全面建成小康社会、全面深化改革、全面依法治国、全面从严治党等四大重点任务。
-            </div>
-            
+      </div>
+      <div class="content">
+        <div class="square-grid">
+          <div class="block" style="width: 100%;">
+            (1) 习近平总书记着眼于全面建成小康社会、实现社会主义现代化和中华民族伟大复兴的中国梦，坚持整体推进、重点突破的方法论<br>
+            (2) 他制定了“五位一体”总体布局和“四个全面”战略布局，既着眼于工作全局，又突出战略重点，从点面结合上回答新时代建设布局的问题
           </div>
+          <div class="block">
+            “五位一体”总体布局<br>
+            (1) “五位一体”总体布局涉及经济建设、政治建设、文化建设、社会建设、生态文明建设等各个方面。<br>
+            (2) 它是党中央治国理政的整体布局，从面上回答新时代“施政布局”的问题。
+          </div>
+          <div class="block">
+            “四个全面”战略布局<br>
+            (1) “四个全面”战略布局涉及全面建成小康社会、全面深化改革、全面依法治国、全面从严治党等四大重点任务。<br>
+            (1) “四个全面”战略布局涉及全面建成小康社会、全面深化改革、全面依法治国、全面从严治党等四大重点任务。
+          </div>
+
         </div>
       </div>
-    </div> -->
+      <div class="down">
+        <i class="fa fa-arrow-down" style="height: 100%;width: auto;"></i>
+      </div>
+    </div>
 
     <div class="section" style="background-image: url(img/bg/bg_4.jpg);">
       <div class="tile">
@@ -120,6 +126,9 @@
 
         </div>
       </div>
+      <div class="down">
+        <i class="fa fa-arrow-down" style="height: 100%;width: auto;"></i>
+      </div>
     </div>
 
     <div class="section" style="background-image: url(img/bg/bg_4.jpg);">
@@ -130,10 +139,9 @@
         <div class="square-grid">
           <div class="block" style="width: 80%;">
             在<b>社会发展</b>方面，这十年，<br>
-            十年来，<br>
-            十年来，<br>
-            十年来，<br>
-            十年来，<br>
+            十年来，我国建成<b>全球规模最大</b>的多元清洁电力系统，发电装机达24.7亿千瓦，超过G7国家总和；可再生能源装机超11亿千瓦，占全球同类装机的30%以上；35千伏及以上线路长226万千米。发电装机、可再生能源装机、输电线路长度分别比十年前增长1.2倍、3倍、0.5倍。<br><br>
+            十年来，我国基本建成了<b>中国特色社会救助体系</b>。这一体系年均保障低保人员4000万人以上;基本民生保障标准不断提高。2012年~2021年全国城乡低保平均标准分别增长了1.2倍和2.1倍;我国将事实无人抚养儿童纳入保障范围，建立了农村留守老年人、妇女、儿童关爱服务制度，构建起未成年人保护体系<br><br>
+            十年来，我国建成了<b>全球规模最大</b>、技术最先进的网络基础设施，光纤宽带实现了从十兆到百兆、千兆的指数级增长，移动网络也实现了从4G并肩到5G引领的历史性跨越。<br>
           </div>
 
           <div class="block">
@@ -150,6 +158,9 @@
           </div>
 
         </div>
+      </div>
+      <div class="down">
+        <i class="fa fa-arrow-down" style="height: 100%;width: auto;"></i>
       </div>
     </div>
 
@@ -209,9 +220,15 @@
         $('#fullpage').fullpage({
           navigation: true,
         });
+        $('.down').click(function () {
+          $.fn.fullpage.moveSectionDown(); // Fullpage 下一页方法
+        });
+        if ($(window).width() <= 767) { // 当屏幕宽度小于等于 767px 时执行跳转
+          window.location.href = "phone.html";
+        }
       });
     </script>
 
 </body>
 
-</html>
+</html>0
